# PyThor

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docs.yml
docs/: index.md  reference.md
pythor/: __init__.py  pythor.py  pythor_cli.py
reference/: index.html
search/: search_index.json
